# berry-good-bot

./: README.md
.github/workflows/: ci.yaml
arduino/Arduino_testCode/: uno-mega-serial.py
arduino/Arduino_testCode/Wristle_gripper_testCode/: Wristle_gripper_testCode.ino
arduino/Arduino_testCode/joint123_test/: joint123_test.ino
arduino/Arduino_testCode/linearTest_UNO/: linearTest_UNO.ino
arduino/Arduino_testCode/serial_test1_MEGA/: serial_test1_MEGA.ino
arduino/Arduino_testCode/serial_test2_MEGA/: serial_test2_MEGA.ino
arduino/Arduino_testCode/serial_test_UNO/: serial_test_UNO.ino
arduino/Arduino_testCode/serial_test_wg_UNO/: serial_test_wg_UNO.ino
arduino/ros_uno/: ros_uno.ino
arduino/str_mega/: str_mega.ino
arduino/str_uno/: str_uno.ino
behavior_trees/: RoughAproach_test.xml  berryNamedPoseTest1.xml  berryNamedPoseTest2.xml  fake_strawberry_harvest.xml  pick_with_loops.xml  roughApproachBT_test1.xml  roughApproachBT_test2.xml  roughApproach_with_ibvs1.xml  roughApproach_with_ibvs2.xml  strawberry_harvest.xml
behavior_trees/strawberry_harves_dummy/: ApproachBerry.xml  FindBerry.xml  ServoAndCut.xml
behavior_trees/strawberry_harvest/: ApproachBerry.xml  FindBerry.xml  ServoAndCut.xml
berry_good_bot_control/: package.xml  setup.cfg  setup.py
berry_good_bot_control/berry_good_bot_control/: control_node.py  debug_node.py
berry_good_bot_control/config/: named_poses.yaml
berry_good_bot_control/launch/: control_launch.py
berry_interface/: CMakeLists.txt  package.xml
berry_interface/action/: DetectStrawberry.action  GripperControl.action  MoveToNamedPose.action  MoveToPose.action  ServoTwist.action  VisualServoDetect.action  VisualServoing.action
berry_interface/msg/: DetectionBBox.msg
berry_kinematics_control/: package.xml  setup.cfg  setup.py
berry_kinematics_control/berry_kinematics_control/: control_node.py  debug_cli.py  kin_utils.py
berry_kinematics_control/config/berrybot/: named_poses.yaml
berry_kinematics_control/config/sample_robot/: named_poses.yaml
berry_kinematics_control/launch/: berry_bringup.launch.py  bringup.launch.py  control.launch.py
berry_perception/: package.xml  setup.cfg  setup.py
berry_perception/berry_perception/: bottom_cam_param_test.py  dataSetCapture.py  debug_cli.py  ibvs_helpers.py  microsServoingPerceptionTest.py  perception_node.py  stem_and_yolo.py  visualServoing.py
berry_perception/config/: camera_to_eef.yaml
berry_perception/launch/: perception_bringup.launch.py  realsense_perception.launch.py
berry_perception/testCode/: find_CameraIndex.py  hsv_picker.py  realTime_infer.py
berry_serial_bridge/: package.xml  setup.cfg  setup.py
berry_serial_bridge/berry_serial_bridge/: bridge_node.py
berry_serial_bridge/config/: joint_map.yaml
berry_serial_bridge/launch/: testSerialbridge.launch.py  testkinematicsControl.launch.py
config/: default.yaml
config/bt/: berry_named_pose_test1.yaml  berry_named_pose_test2.yaml  harvest.yaml  pick_with_loops.yaml  roughApproach_with_ibvs1.yaml  roughApproach_with_ibvs2.yaml  rough_approach_test.yaml  rough_approach_test1.yaml  rough_approach_test2.yaml  strawberry_harvest.yaml
core/strawberry_core/: CMakeLists.txt  package.xml
robot/berrybot_description/: package.xml  setup.cfg  setup.py
robot/berrybot_description/berrybot_description/: ikpyTest.py  keyboard_servoing.py
robot/berrybot_description/launch/: view_model.launch.py
robot/berrybot_description/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL
robot/berrybot_description/rviz/: model_visualization.rviz
robot/berrybot_description/urdf/: berrybot.urdf
robot/sample_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robot/sample_moveit_config/config/: berry_good_bot.ros2_control.xacro  berry_good_bot.srdf  berry_good_bot.urdf.xacro  berry_servo_config.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
robot/sample_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  (+2 more)
robot/strawberry_description/: CMakeLists.txt  package.xml
ros2_bt_tut/: CMakeLists.txt
ros2_bt_tut/src/: bt_tut_01.cpp  bt_tut_09.cpp
scripts/: run_bt.py  run_bt.sh  run_bt_subtree.sh
strawberry_bt_nodes/: CMakeLists.txt  package.xml  strawberry_bt_nodes_plugins.xml
strawberry_bt_nodes/include/: fake_nodes.hpp
strawberry_bt_nodes/src/: fake_nodes.cpp
strawberry_task_planner/: CMakeLists.txt  package.xml
strawberry_task_planner/include/strawberry_task_planner/: fake_nodes.hpp  ibvs_bt_nodes.hpp  named_pose_nodes.hpp  rough_approach_bt_nodes.hpp  rough_approach_nodes.hpp  utility_nodes.hpp
strawberry_task_planner/src/: run_bt_node.cpp
(+51 files in other folders)
